fix: the vertical scrolling bug
- Fix the vertical scrolling bug when page content does not fit on screen or screen height is too low

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,7 @@ html {
   box-shadow: 0px 0px 30px #cccccc;
   border-radius: 10px;
   padding: 15px;
+  margin: auto;
 }
 
 .container-title {
